# this_framework_that_i_made

./: .$class structure.drawio.bkp  .$class structure.drawio.dtmp  .gitignore  README.md  audio.py  class structure.drawio  device.py  main.py  pyproject.toml  requirements.txt  video.py
examples/: show_window.py
src/this_framework_that_i_made/: audio.py  generics.py  monitors.py  python.py  quick_test.py  systems.py
src/this_framework_that_i_made.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/this_framework_that_i_made/audio_helpers/: __init__.py  audio_standards.py  msft_audio.py  pyaudio_helper.py  volume_helpers.py  wasapi.py  wasapi_per_app_loopback.py
src/this_framework_that_i_made/audio_helpers/ms_audio_mappings/: IAudioCaptureClient.py  IAudioClient.py  IAudioSessionControl.py  IAudioSessionControl2.py  IAudioSessionEnumerator.py  IAudioSessionManager.py  IAudioSessionManager2.py  IAudioSessionNotification.py  IMMDevice.py  IMMDeviceCollection.py  IMMDeviceEnumerator.py  IPropertyStore.py  (+2 more)
src/this_framework_that_i_made/generic/: mux.py
src/this_framework_that_i_made/input_helpers/: common.py  gamepad.py  keyboard.py  mouse.py
src/this_framework_that_i_made/things_DEPRECATED/: audio.py  video.py
src/this_framework_that_i_made/video_helpers/: linux_windows.py  mac_windows.py  monitors.py  msft_windows.py
structure/: audio.py  generics.py  streams.py  systems.py
test_scripts/: test_audio.py  test_inputs.py  test_monitors.py  test_runtime.py
tests/: main_DEPRECATED.py  test.py
things/: audio.py  device.py  functions.py  video.py
