# pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "this_framework_that_i_made"
version = "0.1.0"
description = "My awesome framework"
readme = "README.md"
requires-python = ">=3.13.7"
license = {text = "MIT"}
authors = [{name="You", email="comfycoder.exe@gmail.com"}]
dependencies = [
  "sounddevice>=0.4.6",
  "psutil>=5.9",
] 

[tool.setuptools.packages.find]
where = ["src"]                      # recommended layout

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
