# pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "this_framework_that_i_made"
version = "0.1.0"
description = "My awesome framework"
readme = "README.md"
requires-python = ">=3.13.7"
license = {text = "MIT"}
authors = [{name="You", email="comfycoder.exe@gmail.com"}]
dependencies = [
  "numpy>=2.3.3",
  "psutil>=5.9",
  "mss>=10.1.0",
  "pywin32>=311; sys_platform == 'win32'",
  "comtypes>=1.4.12; sys_platform == 'win32'",
  "pycaw>=20240210; sys_platform == 'win32'",
  "PyAudio>=0.2.14; sys_platform == 'linux'",
  "PyAudioWPatch>=0.2.12.7; sys_platform == 'win32'",
  "PyGetWindow>=0.0.9; sys_platform == 'win32'",
  "pillow>=11.3.0",
  "pynput>=1.8.1",
]

[tool.setuptools.packages.find]
where = ["src"]                      # recommended layout

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
